added basic skeleton to html and ol script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <title>Coding Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
+    <header>
+       <p>
+        View High Scores
+       </p>
+
+       <p>
+        Timer
+       </p>
+    </header>
+    
+    <main>
+        <section id="question-container">
+            <h1 id="question-txt">Your Question Will Appear Here</h1>
+            <ol id="answers"></ol>
+        </section>
+
+    </main>
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
