added a function to generate list item buttons

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 
 <body>
     <header>
-       <p>
-        View High Scores
-       </p>
+       <a href="#">View High Scores</a>
 
-       <p>
-        Timer
-       </p>
+       <p>Timer:</p>
     </header>
     
     <main>
