added a function to randomly generate questions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
        <a href="#">View High Scores</a>
 
-       <p>Timer:</p>
+       <p id="timer">Timer:</p>
     </header>
     
     <main>
