--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     
     <main>
         <section id="question-container">
-            <h1 id="question-txt">Your Question Will Appear Here</h1>
+            <h1 id="question-txt">Coding Quiz Challenge</h1>
+            <p>Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <button id="start-btn">Start Quiz</button>
             <ol id="answers"></ol>
         </section>
 
