added game over function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
        <a href="#">View High Scores</a>
 
-       <p id="timer">Timer:</p>
+       <p id="timer">Timer: <span id="span-time">1:00</span></p>
     </header>
     
     <main>
