updated game over function to include label and form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <ol id="answers"></ol>
         </section>
 
+        <!-- <section>
+            <form action="#">
+                <input type="text" />
+
+            </form>
+        </section> -->
     </main>
     <script src="./assets/js/app.js"></script>
 </body>
