adds starter code for listeners to capture scores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-       <a href="#">View High Scores</a>
+       <a href="#quiz-scores">View High Scores</a>
 
        <p id="timer">Timer: <span id="span-time">1:00</span></p>
     </header>
@@ -21,6 +21,10 @@
             <p id="intro">Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
             <button id="start-btn">Start Quiz</button>
             <ol id="answers"></ol>
+        </section>
+
+        <section>
+            <ul id="quiz-scores"></ul>
         </section>
 
         <!-- <section>
