added functions to store and retrieve scores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-       <a href="#quiz-scores">View High Scores</a>
+       <a href="#" id="score-link">View High Scores</a>
 
        <p id="timer">Timer: <span id="span-time">1:00</span></p>
     </header>
