changed storage method for scores

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
 
         <section>
-            <ul id="quiz-scores"></ul>
+            <ol id="quiz-scores"></ol>
         </section>
 
         <!-- <section>
