added functions to store scores

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Cody Burkholder" />
+    <meta name="description" content="A coding quiz built using primarily JavaScript." />
     <title>Coding Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
@@ -21,6 +22,7 @@
             <p id="intro">Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
             <button id="start-btn">Start Quiz</button>
             <ol id="answers"></ol>
+            <hr>
         </section>
 
         <section>
