adds list elements to html with corresponding code

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             <h1 id="question-txt">Coding Quiz Challenge</h1>
             <p id="intro">Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
             <button id="start-btn">Start Quiz</button>
-            <ol id="answers"></ol>
-            <hr>
+            <ol id="answers">
+                <button class="ansBtns"><li id="ans1"></li></button>
+                <button class="ansBtns"><li id="ans2"></li></button>
+                <button class="ansBtns"><li id="ans3"></li></button>
+                <button class="ansBtns"><li id="ans4"></li></button>
+            </ol>
         </section>
-
+        <hr>
         <section>
             <ol id="quiz-scores"></ol>
         </section>
