added functionality for question generation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </ol>
         </section>
         <hr>
+        <h2 id="correct"></h2>
         <section>
             <ol id="quiz-scores"></ol>
         </section>
